# rust-chatroom

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.sh  chat.code-workspace  docker-compose.yml  entry.sh
.github/workflows/: api-verify.yml  backend-security-audit.yml  load-balancer-verify.yml  ui-lint-and-typ-checks.yml
api/: .dockerignore  .env  Cargo.toml  Dockerfile
api/migration/: Cargo.toml  Dockerfile
api/migration/src/: m20220101_000001_create_table.rs
api/src/: config.rs  errors.rs  logging.rs  main.rs
api/src/clients/: mod.rs  ollama.rs  redis.rs  session.rs
api/src/entity/: chat.rs  message.rs  mod.rs  online_user.rs  prelude.rs  user.rs
api/src/middleware/: auth.rs  lb_auth.rs  mod.rs  user_auth.rs
api/src/models/: chat.rs  claims.rs  create_chat.rs  create_user.rs  join_chat.rs  login.rs  messages.rs  mod.rs  user.rs
api/src/routes/: active_chats.rs  create_chat.rs  create_user.rs  get_all_chats_by_name.rs  get_chat.rs  join_chat.rs  login.rs  mod.rs  register.rs  who_am_i.rs  whoami.rs
api/src/routes/auth/: logout.rs  mod.rs
api/src/routes/chat/: chat.rs  mod.rs  ws_chat.rs  ws_chat_list.rs
api/src/ws/: broadcaster.rs  chat.rs  chat_list.rs  mod.rs
load-balancer/: Cargo.toml  Dockerfile
load-balancer/src/: config.rs  errors.rs  hash_ring.rs  health_checker.rs  logging.rs  main.rs  proxy_service.rs  server_pool.rs
load-balancer/src/core/: health_checker.rs  mod.rs  server_pool.rs  websocket_manager.rs
load-balancer/src/routes/: health.rs  mod.rs  status.rs
load-balancer/src/routing/: handlers.rs  hash_ring.rs  mod.rs  proxy_service.rs  session_manager.rs
tests/: pyproject.toml  test_lb.py
ui/: .dockerignore  .env.development  .env.production  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  app-config.tsx  main.tsx
ui/src/api/: query-client.tsx  request.ts  use-websocket.tsx
ui/src/api/chat/: hooks.tsx  request.tsx
ui/src/api/users/: hooks.tsx  request.tsx
ui/src/components/: Styled.ts  navbar.tsx  protected-layout.tsx  public-layout.tsx  spinner.tsx
ui/src/hooks/: auth-context.tsx  use-auth.tsx
ui/src/pages/: chat-room.tsx  create-chat.tsx  home.tsx  join-chat.tsx  login.tsx  register.tsx  settings.tsx
ui/src/styles/: global-styles.ts  theme.tsx  variables.css
