[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum       = { version = "0.8", features = ["ws", "json"] }
tokio       = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["add-extension", "cors"] }
hyper = "1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
futures     = "0.3"
lazy_static = "1.4"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }

[dev-dependencies]
sea-orm-cli = "1.1"