[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum       = { version = "0.8", features = ["ws", "json"] }
axum-server = "0.3"
tokio       = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["add-extension", "cors"] }
tower-cookies = "0.11"
hyper = "1"
reqwest = { version = "0.12", features = ["json"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
futures     = "0.3"
lazy_static = "1.4"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
jsonwebtoken = "9.3"
chrono = "0.4.41"
bcrypt = "0.17.0"
dotenvy = "0.15"
derive_more = "0.99"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
redis = { version = "0.23", features = ["aio", "tokio-comp", "connection-manager"] }
sea-orm-migration = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
migration = { path = "./migration" }

[dev-dependencies]
sea-orm-cli = "1.1"
