[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["http2", "macros", "ws"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower_governor = "0.7.0"
hyper = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower-cookies = "0.11"
base64 = "0.22.1"
dotenv = "0.15"
derive_more = "0.99"
http = "1.0"
uuid = "1.17.0"

